// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RpgProgressBar calculates progress correctly: Progress bar at 50% 1`] = `
<body>
  <div>
    <div
      class="rpgui-progress"
      data-rpguitype="progress"
    >
      <div
        class=" rpgui-progress-track"
      >
        <div
          class="rpgui-progress-fill red progress-animation"
          style="left: 0px; width: 50%;"
        />
      </div>
      <div
        class=" rpgui-progress-left-edge"
      />
      <div
        class=" rpgui-progress-right-edge"
      />
    </div>
  </div>
</body>
`;

exports[`RpgProgressBar renders correctly: Progress bar at 100% 1`] = `
<body>
  <div>
    <div
      class="rpgui-progress"
      data-rpguitype="progress"
    >
      <div
        class=" rpgui-progress-track"
      >
        <div
          class="rpgui-progress-fill red progress-animation"
          style="left: 0px; width: 100%;"
        />
      </div>
      <div
        class=" rpgui-progress-left-edge"
      />
      <div
        class=" rpgui-progress-right-edge"
      />
    </div>
  </div>
</body>
`;

exports[`RpgProgressBar sets color correctly based on type: HP progress bar 1`] = `
<body>
  <div>
    <div
      class="rpgui-progress"
      data-rpguitype="progress"
    >
      <div
        class=" rpgui-progress-track"
      >
        <div
          class="rpgui-progress-fill red progress-animation"
          style="left: 0px; width: 50%;"
        />
      </div>
      <div
        class=" rpgui-progress-left-edge"
      />
      <div
        class=" rpgui-progress-right-edge"
      />
    </div>
  </div>
</body>
`;

exports[`RpgProgressBar sets color correctly based on type: XP progress bar 1`] = `
<body>
  <div>
    <div
      class="rpgui-progress"
      data-rpguitype="progress"
    >
      <div
        class=" rpgui-progress-track"
      >
        <div
          class="rpgui-progress-fill red progress-animation"
          style="left: 0px; width: 50%;"
        />
      </div>
      <div
        class=" rpgui-progress-left-edge"
      />
      <div
        class=" rpgui-progress-right-edge"
      />
    </div>
  </div>
  <div>
    <div
      class="rpgui-progress"
      data-rpguitype="progress"
    >
      <div
        class=" rpgui-progress-track"
      >
        <div
          class="rpgui-progress-fill purple progress-animation"
          style="left: 0px; width: 50%;"
        />
      </div>
      <div
        class=" rpgui-progress-left-edge"
      />
      <div
        class=" rpgui-progress-right-edge"
      />
    </div>
  </div>
</body>
`;
